Fixed icon grid spacing

--- a/src/EditCreateListPage/ListIconOptions.css
+++ b/src/EditCreateListPage/ListIconOptions.css
@@ -1,32 +1,60 @@
 .icon-options {
+  width: min(90%, 400px);
   background: #eae8e8;
   border-radius: 15px;
   display: grid;
-  align-items: center;
+  align-items: left;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
   justify-content: space-evenly;
   row-gap: 1em;
-  column-gap: 1em;
   margin-top: 1em;
-  margin-left: 1em;
-  margin-right: 1em;
+  margin-left: 1.2em;
+  margin-right: 1.2em;
   padding-top: 1.2em;
   padding-bottom: 1.2em;
-  padding-left: 6em;
-  padding-right: 6em;
+  padding-left: 0em;
+  padding-right: 0em;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  margin-left: auto;
+  margin-right: auto;
 }
 
+@media screen and (min-width: 769px) and (max-height: 689px) {
+  .icon-options {
+    width: min(90%, 700px);
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;  
+    justify-content: space-evenly;
+    row-gap: 1.4em;
+    margin-right: auto;
+  }  
+}
+@media screen and (min-width: 769px) {
+  .icon-options {
+    margin-top: 1.8em;
+  }  
+}
 .icon-options div {
   color: #172528;
-  background: rgb(252, 252, 252);
+  background: #feffff;
   padding: 0.2em 0.2em 0.2em 0.2em;
   margin: auto;
   border-radius: 10px;
   width: 40px;
   height: 40px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+@media screen and (max-width: 310px) {
+  .icon-options div {
+    border-radius: 8px;
+    width: 30px;
+    height: 30px;
+  }  
+  .icon-options i {
+    font-size: 17pt !important;
+  }
 }
 
 .icon-options i {
