--- a/src/LargeScreens/LargeScreenSearchBar.css
+++ b/src/LargeScreens/LargeScreenSearchBar.css
@@ -23,7 +23,7 @@
   }
 }
 
-@media screen and (min-width: 820px) {
+@media screen and (min-width: 830px) {
   .large-screen-search {
     width: 240px;
   }
