--- a/src/LargeScreens/LargeScreenSubpageHeader.css
+++ b/src/LargeScreens/LargeScreenSubpageHeader.css
@@ -24,7 +24,7 @@
 
 @media screen and (min-width: 845px) {
   .single-list-name {
-    width: 180px;
+    width: 190px;
   }
 }
 
